Overflow fix

--- a/src/VedouciWeb/wwwroot/css/app.css
+++ b/src/VedouciWeb/wwwroot/css/app.css
@@ -3,6 +3,11 @@
 html, body {
     font-family: Arial, sans-serif;
     font-size:initial;
+    
+}
+
+html {
+    overflow-y: scroll;
 }
 
 h1:focus {
